src/objects/TaskStreamTaskFailure__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentIDKey__c</fullName>
        <label>Assessment ID Key</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateACase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Student__r.AccountId&amp;&quot;&amp;def_contact_id=&quot;&amp;Student__c&amp;&quot;&amp;RecordType=012a0000001ZKnA&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a00000022yjm&quot;, &quot;Create A Case&quot;) , &quot;_blank&quot; )</formula>
        <label>Create A Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastFailedAttempt__c</fullName>
        <label>Last Failed Attempt</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberFailedAttempts__c</fullName>
        <label>Number of Failed Attempts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <label>PIDM</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Task Stream Task Failures</relationshipLabel>
        <relationshipName>TaskStreamTaskFailures</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskCompletedDate__c</fullName>
        <description>Date the student completed (passed) the task.</description>
        <label>Task Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskFailureKey__c</fullName>
        <externalId>true</externalId>
        <label>Task Failure Key</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TaskStartDate__c</fullName>
        <description>Date the task was started by the student.</description>
        <label>Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskStreamAssessment__c</fullName>
        <label>Task Stream Assessment</label>
        <referenceTo>TaskStreamAssessment__c</referenceTo>
        <relationshipLabel>Task Stream Task Failures</relationshipLabel>
        <relationshipName>TaskStreamTaskFailures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskTitle__c</fullName>
        <label>Task Title</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Task Stream Task Failure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Student__c</columns>
        <columns>NAME</columns>
        <columns>TaskTitle__c</columns>
        <columns>LastFailedAttempt__c</columns>
        <columns>NumberFailedAttempts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Stream Assessment Code</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000001tKPKEA2_00Na000000B5iawEAB</fullName>
        <active>true</active>
        <field>StudentDisposition__c.TaskFailure__c</field>
        <filterItems>
            <field>$Source.Student__c</field>
            <operation>equals</operation>
            <valueField>TaskStreamTaskFailure__c.Student__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Student Concern_Task Failure</name>
        <sourceObject>StudentDisposition__c</sourceObject>
    </namedFilters>
    <pluralLabel>Task Stream Task Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>